# machete

./: .gitignore  .macheterc.example  AGENTS.md  CHANGELOG.md  INSTALLATION.md  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
.whetstone/: whetstone.db
.whetstone/exports/: 2026-03-13T01-10-35.md
app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
app/src/components/branches/: BranchesView.tsx  CreateBranchDialog.tsx  (+2 more)
app/src/hooks/: useDrag.ts  useKeyboardShortcuts.ts  useMachete.ts  useRepo.ts  useRepoLayout.ts  useTabManager.ts  useTheme.ts  useUpdater.ts
app/src/types/: index.ts
docs/backlog/: AGENTS.md  IDEAS.md  README.md
docs/backlog/stories/: MACH-0001-branch-command.md  MACH-0003-integration-tests.md  MACH-0004-safe-prune.md  MACH-0007-gui.md  MACH-0008-pr.md  MACH-0009-auto-updater.md  MACH-0010-full-git-operations.md
scripts/: changelog.mjs  postinstall.mjs
src/: index.ts
src/cli/: args.test.ts  args.ts  format.ts  help.ts  prompt.ts
src/commands/: commit.ts  config.ts  gui.ts  init.ts  pr.test.ts  pr.ts  prune.test.ts  prune.ts  release.test.ts  release.ts  status.ts
src/lib/: changelog.ts  config.test.ts  config.ts  git.test.ts  git.ts  gitignore.ts  types.ts  version.ts
(+33 files in other folders)
