[package]
name = "machete-app"
version = "0.1.0"
description = "Machete Git GUI"
authors = ["Frontier Collective"]
edition = "2021"

[lib]
name = "machete_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
tauri-plugin-window-state = "2"
